Working tab system with just the headings for each page. Accessibility issues are present due to insufficient contrast in the tab text colour from the background and the home tab not having text content.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -43,6 +43,11 @@ h1
     padding: 0;
 }
 
+h2
+{
+    font-size: 1.75em;
+}
+
 .themeDarkBlueBIU
 {
     background-color: #00445e;
@@ -53,6 +58,11 @@ h1
 {
     background-color: #0bc2d2;
     color: #fff;
+}
+
+.navbar-brand
+{
+    display: none;
 }
 
 #logoBIU
